# Sharp-LV

./: .gitignore  LICENSE  Readme.md  Sharp-LV.kicad_pcb  Sharp-LV.kicad_prl  Sharp-LV.kicad_pro  Sharp-LV.kicad_sch  fp-lib-table  sym-lib-table
.github/: FUNDING.yml
Firmware/: Readme.md
Firmware/idf-Not_finished/: CMakeLists.txt  sdkconfig
Firmware/maxtouch_zephyr/: sample.yaml
S3-silicon-Sharp-Touch/: README.md  S3-silicon-Sharp-Touch.kicad_pcb  S3-silicon-Sharp-Touch.kicad_prl  S3-silicon-Sharp-Touch.kicad_pro  S3-silicon-Sharp-Touch.kicad_sch  fp-lib-table  sym-lib-table
S3-silicon-Sharp-Touch/component/: Readme.md
S3-silicon-Sharp-Touch/fabrication/: .~lock.BOMs.xlsx#  .~lock.v7-soc-8bit-all-pos.xlsx#  BOMs.xlsx  S3-pos.xlsx  S3-silicon-Sharp-Touch-all-pos.csv
components/3D/: CoinBattery_MS621FE-FL11E.stp  MOLEX_502426-0810.stp  NRF52840-QIAA-R.stp  TPS2113APWR.stp
components/footprint/: 2450AT42E0100E-ANT.kicad_mod  CON_Molex_5024260812.kicad_mod  CoinBattery_MS621FE.kicad_mod  FH5210S05SH99_LCD.kicad_mod  NRF52840_AQFN73_7X7_NOR.kicad_mod  QWIIC_SM04B-SRSS-TB_LFSN_.kicad_mod  RV3032C7.kicad_mod  S2BPHSM4TBLFSN.kicad_mod  TPS2113APWR.kicad_mod
components/symbol/: CON_Molex_5024260812.bak  CON_Molex_5024260812.kicad_sym  NRF52840_AQFN73_7X7_NOR.kicad_sym  RV-3032-C7.kicad_sym  S2B-PH-SM4-TB_LF__SN_.kicad_sym  TPS2113APWR.kicad_sym
enclosure/: SHARP-S3-battery-BOTTOM.stl  SHARP-S3-battery-TOP.stl  SHARP-S3-battery.blend
firmware_test/idf/main/: CMakeLists.txt  i2c-scan.c
research-documents/: components.txt
(+31 files in other folders)
